--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+reqwest = { version = "0.11.3", features = ["json"] }
+tokio = { version = "1.9.0", features = ["full"] }
+serde = { version = "1.0.118", features = ["derive"]}
+serde_json = { version = "1.0.60" }
